--- a/charts/lr-forwarder/templates/deployment.yaml
+++ b/charts/lr-forwarder/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "forwarder.name" . }}
-  namespace: kube-system
+  namespace: {{ .Values.args.namespace }}
   labels:
     app: {{ template "forwarder.name" . }}
     appVersion: {{ .Values.args.version }}
