--- a/charts/lr-aggregator/values.yaml
+++ b/charts/lr-aggregator/values.yaml
@@ -4,7 +4,7 @@
 replicaCount: 1
 
 args:
-  version: "v0.1.43"
+  version: "v0.1.47"
   namespace: "kube-system"
 
 image:
@@ -15,6 +15,7 @@ service:
   annotations: {}
   type: ClusterIP
   port: 9966
+  nodePort: 31966
 
 volumes:
   varlog: /var/log
